replaced find all function with get farm details